package my_demo.bridg.v1;

/**
 * @author Xander Wu
 * @date 2022/9/27 17:56
 */
public interface ICoffee {
    void orderCoffee(int count);
}
