package my_demo.bridg.v2.additives;

/**
 * 咖啡添加剂
 * @author Xander Wu
 * @date 2022/9/27 18:02
 */
public interface ICoffeeAdditives {
    void addSomething();
}
